# pycoevolity

./: .gitignore  CHANGES.md  README.md  pyproject.toml  setup.py
dev-env/: environment.yml
pycoevolity/: __init__.py  argparse_utils.py  errors.py  fileio.py  metadata.py  parsing.py  partition.py  posterior.py  seq.py  stats.py  tempfs.py
pycoevolity/cli/: dummy_data.py  fastas2alignment.py  fastas2fastas.py  loci2alignment.py  loci2dppmsbayes.py  msbayes2alignments.py  multisumevents.py  sum_locus_overlap.py  sumchains.py  sumdivtimes.py  sumevents.py  sumsims.py  sumsizes.py  sumtimes.py
pycoevolity/test/: __init__.py  test_fastas2alignment.py  test_loci2alignment.py  test_parsing.py  test_partition.py  test_posterior.py  test_seq.py  test_stats.py  test_sum_locus_overlap.py  test_utils.py
pycoevolity/test/data/: all-sals.json  all-sals.loci  dpp-msbayes-subs-per-site.cfg  ecoevolity-std-out.txt  msbayes.cfg  species1-mt.fasta  species2-nuc.fasta
pycoevolity/test/support/: package_paths.py  pycoevolity_test_case.py
sumcoevolity/: __init__.py  argparse_utils.py  errors.py  fileio.py  parsing.py  posterior.py  stats.py  tempfs.py
sumcoevolity/cli/: loci2alignment.py  loci2nex.py  sumdivtimes.py
sumcoevolity/test/: __init__.py  test_parsing.py  test_posterior.py  test_stats.py  test_tempfs.py
sumcoevolity/test/data/: cyrtodactylus.loci
sumcoevolity/test/support/: package_paths.py  sumcoevolity_test_case.py
tests/: test_tempfs.py
tests/data/: dpp-msbayes.cfg  species1-nuc.fasta  species2-mt.fasta
